--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,25 @@
+spring.config.import=optional:file:.env[.properties]
+spring.datasource.url=${DATABASE_URL}
 
+
+spring.datasource.username=${USERNAME}
+spring.datasource.password=${PASSWORD}
+
+
+spring.jpa.hibernate.ddl-auto=create-drop
+# spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.springframework.security=TRACE
+spring.data.web.pageable.one-indexed-parameters=true
+
+
+spring.mail.host=${EMAILHOST}
+spring.mail.port=${EMAILPORT}
+spring.mail.username=${EMAILHOSTUSER}
+spring.mail.password=${EMAILHOSTPASSWORD}
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=true
