--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource-variable/manrope": "^5.0.4",
     "@fontsource-variable/open-sans": "^5.0.5",
     "@fontsource/bangers": "^5.0.4",
     "axios": "^1.4.0",
