--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.config.import=optional:file:.env[.properties]
 spring.datasource.url=${DATABASE_URL}
 
-
+secretkey=${SECRETKEY}
+pexels=${PEXELS}
 spring.datasource.username=${USERNAME}
 spring.datasource.password=${PASSWORD}
 
