--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@fontsource-variable/open-sans": "^5.0.5",
     "@fontsource/bangers": "^5.0.4",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "framer-motion": "^10.12.18",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
