--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
