--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
     "framer-motion": "^10.12.18",
+    "lodash": "^4.17.21",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
